# car_tracking

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
cmake/modules/: FindACADOS.cmake
data/: basement1.txt  reference.txt
example/: CMakeLists.txt  b_spline.py  bspline.cpp  cubic_spline.py  example_local.cpp  example_preprocess.cpp  example_tracking.cpp  main.cpp  visual_path.py
path_preprocessing/: CMakeLists.txt
path_preprocessing/include/: BSpline.h  CubicSpline.h  Spline.h  Spline1D.h
path_preprocessing/src/: BSpline.cpp  CubicSpline.cpp  Spline.cpp  Spline1D.cpp
path_tracking/: CMakeLists.txt
path_tracking/config/: car_model.yaml
path_tracking/generated_model/: acados_solver_CarModel.c  acados_solver_CarModel.h
path_tracking/generated_model/CarModel_model/: CarModel_expl_ode_fun.c  CarModel_expl_vde_adj.c  CarModel_expl_vde_forw.c  CarModel_model.h
path_tracking/include/: CarModel.h  Controller.h  LocalPlanner.h  LocalTrajectory.h
path_tracking/include/generated_model/: acados_solver_CarModel.c
path_tracking/include/generated_model/CarModel_model/: CarModel_expl_vde_adj.c  CarModel_model.h
path_tracking/script/: car_model.py  controller_opt.py  example.py
path_tracking/src/: Controller.cpp  LocalPlanner.cpp  LocalTrajectory.cpp
python/: visual_animation.py  visual_path.py  visual_tracking.py
scripts/: run_example.sh  run_example_local.sh  run_example_preprocess.sh  run_example_tracking.sh
